--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,7 +4,14 @@
     <nav>
     </nav>
     <main>
-        <h1>register</h1>
+        <form action="/register" methods="POST">            
+            <h1>register</h1>
+            <input type="text" name="nombre" placeholder="Escribe tu nombre">
+            <input type="text" name="email" placeholder="Escribe tu email">
+            <input type="text" name="password" placeholder="Escribe tu nombre">
+            <p>Tienes cuenta?<a href="/login">Inicia sesion</a></p>
+            <button type="submit">enviar</button>
+        </form>
     </main>
 </header>
 
