html de register y login

--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,8 +4,9 @@
     <nav>
     </nav>
     <main>
-        <form action="/register" methods="POST">            
-            <h1>register</h1>
+        <form action="/register" methods="POST">
+            <a href="/">Inicio</a>            
+            <h1>Register</h1>
             <input type="text" name="nombre" placeholder="Escribe tu nombre">
             <input type="text" name="email" placeholder="Escribe tu email">
             <input type="text" name="password" placeholder="Escribe tu nombre">
