--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,7 +4,8 @@
     <nav>
     </nav>
     <main>
-        <form action="/register" methods="POST">            
+        <form action="/register" methods="POST">
+            <a href="/">Inicio</a>            
             <h1>Login</h1>
             <input type="text" name="email" placeholder="Escribe tu email">
             <input type="text" name="password" placeholder="Escribe tu nombre">
