--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -4,12 +4,12 @@
     <nav>
     </nav>
     <main>
-        <form action="/register" methods="POST">
+        <form action="/register" method="POST">
             <a href="/">Inicio</a>            
             <h1>Register</h1>
             <input type="text" name="nombre" placeholder="Escribe tu nombre">
-            <input type="text" name="email" placeholder="Escribe tu email">
-            <input type="text" name="password" placeholder="Escribe tu nombre">
+            <input type="email" name="email" placeholder="Escribe tu email">
+            <input type="password" name="password" placeholder="Escribe tu contrase">
             <p>Tienes cuenta?<a href="/login">Inicia sesion</a></p>
             <button type="submit">enviar</button>
         </form>
